--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Volcanic Mine Vents Predictor
+author=Septem151
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Predicts the status of unchecked vents in Volcanic Mine
+tags=volcanic,mine,vm,mining,prediction,predict,vents,status
+plugins=com.volcanicmine.VMVentsPredictorPlugin
